--- a/friendsanonymous/fa-styles.css
+++ b/friendsanonymous/fa-styles.css
@@ -1,5 +1,5 @@
 * {
-    font-family: sofia-pro, sans-serif;
+    font-family: Helvetica, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
