--- a/css/styles.scss
+++ b/css/styles.scss
@@ -604,6 +604,11 @@ a {
         margin-top: 16px;
         color: $black;
     }
+    .image {
+        width: 100%;
+        margin: 48px 0 -16px;
+        border-radius: $border-radius;
+    }
     .browser {
         width: 100%;
         height: 448px;
