--- a/css/styles.scss
+++ b/css/styles.scss
@@ -158,6 +158,21 @@ a {
 }
 
 //Home
+.video-container-43 {
+    position: relative;
+    padding-bottom: 75%;
+    padding-top: 25px;
+    height: 0;
+    margin: 48px 0 -8px;
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+
 .projects {
     .project-container {
         display: flex;
