--- a/styles.scss
+++ b/styles.scss
@@ -1,11 +1,11 @@
 //Variables
-$primary: #3688BF;
+$primary: #2e87bf;
 $white: #FFFFFF;
 $grey1: #EEF6FC;
-$grey2: #79868F;
-$grey3: #4E616E;
-$grey4: #283841;
-$grey5: #212B33;
+$grey2: #6e7e89;
+$grey3: #31404c;
+$grey4: #293742;
+$grey5: #182026;
 $transition: .1s all ease-in-out;
 $border-radius: 6px;
 $large-padding: 24px;
@@ -14,7 +14,7 @@ $small-padding: 8px;
 $base-font-size: 13px;
 $small-font-size: 11px;
 $large-font-size: 16px;
-$bold: 700;
+$bold: 600;
 
 .font-weight-bold {
     font-weight: $bold;
@@ -35,7 +35,7 @@ $bold: 700;
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-weight: 400;
     font-size: $base-font-size;
     color: $white;
