--- a/styles.css
+++ b/styles.css
@@ -2,174 +2,51 @@
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-weight: 400;
-    font-size: 16px;
-    color: #ffffff;
-    line-height: 1.35;
+    font-weight: 500;
+    font-size: 18px;
+    color: #74808F;
+    line-height: 32px;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
 }
 
-/*::-moz-selection {
-    background: rgba(231, 142, 111, 0.75);
+::-moz-selection {
+    background: #E0EAF5;
 }
 ::selection {
-    background: rgba(231, 142, 111, 0.75);
-}*/
+    background: #E0EAF5;
+}
 
 body {
-    background-color: #0f101d;
-    padding: 16px;
+    background-color: #F7F9FA;
+    padding: 24px;
 }
 
-.portrait {
-    width: 32px;
-    height: 32px;
-    border-radius: 100%;
+.container {
+    max-width: 536px;
+    margin: 5% auto 0;
 }
 
-.image {
-    position: absolute;
-    right: 16px;
-    bottom: -20px;
+h1 {
+    font-size: 24px;
 }
 
-.semibold {
-    font-weight: 600;
-}
-
-.bold {
-    font-weight: 700;
-}
-
-.small {
+h6 {
     font-size: 12px;
-    color: #5c6577;
-    margin-top: 4px;
+    color: #BBC6D3;
 }
 
-.right {
-    float: right;
-    clear: both;
-}
-
-.left {
-    float: left;
-    clear: both;
-}
-
-.link {
-    color: #a657fb;
+a {
+    color: #47454F;
     text-decoration: none;
     cursor: pointer;
 }
 
-.link:hover {
-    opacity: .25;
+a:hover {
+    color: #BBC6D3;
 }
 
-.container {
-    width: 100%;
-    max-width: 600px;
-    margin: 0 auto;
-}
-
-.card {
-    /*box-shadow: 0 8px 32px 0 rgba(94,105,119,0.10);*/
-    border-radius: 4px;
-    padding: 16px;
-    width: auto;
-    max-width: 456px;
-    height: auto;
-    margin-top: 24px;
-    position: relative;
-}
-
-.card-content {
-    display: table;
-}
-
-.card-bg {
-    background: #181e2c;
-}
-
-.card-white {
-    background: #FFFFFF;
-}
-
-.card-white p {
-    color: #181e2c;
-}
-
-.card-white span {
-    color: #181e2c;
-}
-
-.loading {
-    opacity: 0;
-    height: 0;
-    padding: 0;
-    margin-top: 0;
-    animation: loading 1.5s ease-in-out;
-}
-
-@keyframes loading {
-  0% {
-    opacity: 0;
-    height: 38px;
-    padding: 6px 16px 16px;
-    margin-top: 24px;
-    transform: translateY(20px);
-  }
-  25% {
-      opacity: 1;
-      transform: translateY(0);
-  }
-  99% {
-      opacity: 1;
-      height: 38px;
-      padding: 6px 16px 16px;
-      margin-top: 24px;
-  }
-  100% {
-      height: 0;
-      padding: 0;
-      margin-top: 0;
-  }
-}
-
-.bounce-1 {
-  animation: bounce-1 1s infinite;
-}
-
-@keyframes bounce-1 {
-  0% {
-    transform: translateY(0);
-  }
-  33% {
-    transform: translateY(-8px);
-  }
-  66% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-
-.in {
-    opacity: 0;
-    animation: in 1s forwards;
-}
-
-@keyframes in {
-  0% {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
+.bold {
+    font-weight: 700;
 }
