--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,9 @@
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-weight: 500;
-    font-size: 18px;
+    font-size: 14px;
     color: #74808F;
-    line-height: 32px;
+    line-height: 26px;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
@@ -24,12 +24,12 @@ body {
 }
 
 .container {
-    max-width: 536px;
+    max-width: 440px;
     margin: 5% auto 0;
 }
 
 h1 {
-    font-size: 24px;
+    font-size: 16px;
 }
 
 h6 {
@@ -41,6 +41,10 @@ a {
     color: #47454F;
     text-decoration: none;
     cursor: pointer;
+}
+
+span {
+    color: #BBC6D3;
 }
 
 a:hover {
