--- a/styles.css
+++ b/styles.css
@@ -25,10 +25,14 @@ body {
 
 .container {
     max-width: 440px;
-    margin: 5% auto 0;
+    margin: 2% auto 0;
 }
 
 h1 {
+    font-size: 16px;
+}
+
+h1 span {
     font-size: 16px;
 }
 
