--- a/styles.css
+++ b/styles.css
@@ -3,56 +3,50 @@
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-weight: 500;
-    font-size: 14px;
-    color: #74808F;
-    line-height: 26px;
+    font-size: 13px;
+    color: #182026;
+    line-height: 1.5;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
 }
 
-::-moz-selection {
-    background: #E0EAF5;
-}
-::selection {
-    background: #E0EAF5;
-}
-
 body {
-    background-color: #F7F9FA;
-    padding: 24px;
+    padding: 30px;
 }
 
 .container {
-    max-width: 440px;
+    max-width: 616px;
     margin: 2% auto 0;
 }
 
-h1 {
-    font-size: 16px;
-}
-
-h1 span {
-    font-size: 16px;
-}
-
 h6 {
-    font-size: 12px;
-    color: #BBC6D3;
+    margin-bottom: 5px;
+    text-transform: uppercase;
 }
 
 a {
-    color: #47454F;
+    color: #117FFF;
     text-decoration: none;
     cursor: pointer;
 }
 
 span {
-    color: #BBC6D3;
+    font-size: 11px;
+    color: #6E7E89;
+}
+
+p span {
+    font-size: 13px;
+    color: #182026;
+}
+
+.grey {
+    color: #6E7E89;
 }
 
 a:hover {
-    color: #BBC6D3;
+    text-decoration: underline;
 }
 
 .bold {
