--- a/styles.css
+++ b/styles.css
@@ -1,54 +1,249 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-weight: 500;
-    font-size: 13px;
-    color: #182026;
-    line-height: 1.5;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    color: #213030;
+    line-height: 22px;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
 }
 
 body {
-    padding: 30px;
+    background-color: #EAECE7;
 }
 
-.container {
-    max-width: 616px;
-    margin: 2% auto 0;
+h1 {
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 8px;
 }
 
 h6 {
-    margin-bottom: 5px;
+    font-weight: 700;
+    color: #EAECE7;
     text-transform: uppercase;
+    line-height: 1.2;
+    text-align: center;
 }
 
 a {
-    color: #117FFF;
-    text-decoration: none;
+    color: #117fff;
+    font-weight: 700;
     cursor: pointer;
-}
-
-span {
-    font-size: 11px;
-    color: #6E7E89;
-}
-
-p span {
-    font-size: 13px;
-    color: #182026;
-}
-
-.grey {
-    color: #6E7E89;
+    text-decoration: none;
+    border-bottom: 1px solid transparent;
+    padding-bottom: 0;
+    transition: all .125s ease;
 }
 
 a:hover {
-    text-decoration: underline;
+    border-bottom: 1px solid #117fff;
+    padding-bottom: 2px;
 }
 
-.bold {
+p {
+    margin-bottom: 16px;
+}
+
+span {
     font-weight: 700;
+}
+
+.side {
+    background-color: #F5B149;
+    width: 480px;
+    height: 100vh;
+    position: fixed;
+    display: block;
+    padding: 40px 80px;
+}
+
+.mr-16 {
+    margin-right: 16px;
+}
+
+#tw:after {
+    content: 'Tw';
+}
+
+#tw:hover:after {
+    content: 'Twitter';
+}
+
+#dr:after {
+    content: 'Dr';
+}
+
+#dr:hover:after {
+    content: 'Dribbble';
+}
+
+#md:after {
+    content: 'Md';
+}
+
+#md:hover:after {
+    content: 'Medium';
+}
+
+#un:after {
+    content: 'Un';
+}
+
+#un:hover:after {
+    content: 'Unsplash';
+}
+
+#vi:after {
+    content: 'Vi';
+}
+
+#vi:hover:after {
+    content: 'Vimeo';
+}
+
+#sc:after {
+    content: 'Sc';
+}
+
+#sc:hover:after {
+    content: 'SoundCloud';
+}
+
+#ig:after {
+    content: 'Ig';
+}
+
+#ig:hover:after {
+    content: 'Instagram';
+}
+
+.title {
+    max-width: 296px;
+    height: auto;
+    margin: 0 auto;
+    top: 44%;
+    position: absolute;
+}
+
+.contact {
+    width: 56px;
+    height: 56px;
+    background-color: #D55150;
+    position: absolute;
+    bottom: 40px;
+    text-align: center;
+    padding: 12px 8px;
+}
+
+.contact:hover {
+    transform: rotate(360deg);
+    border-bottom: none;
+    padding-bottom: 0;
+    transition: all .75s ease;
+    border-radius: 16px;
+}
+
+.images {
+    width: calc(100% - 480px);
+    height: 400px;
+    position: absolute;
+    right: 0;
+}
+
+.imgA {
+    width: 50%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.imgB {
+    width: 50%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    right: 0;
+}
+
+.main {
+    width: calc(100% - 480px);
+    height: auto;
+    position: absolute;
+    right: 0;
+    margin-top: 472px;
+}
+
+.content {
+    max-width: 536px;
+    height: auto;
+    margin: 0 auto;
+    padding: 0 40px;
+}
+
+
+@media only screen and (max-width: 1199px) {
+    .imgA {
+        width: 100%;
+        height: 50%;
+    }
+    .imgB {
+        width: 100%;
+        height: 50%;
+        margin-top: -6px;
+    }
+}
+
+@media only screen and (max-width: 991px) {
+    .side {
+        width: 100%;
+        height: 400px;
+        position: relative;
+        display: block;
+    }
+    .images {
+        width: 100%;
+        height: 400px;
+    }
+    .imgA {
+        width: 50%;
+        height: 100%;
+    }
+    .imgB {
+        width: 50%;
+        height: 100%;
+        margin-top: 0;
+    }
+    .main {
+        width: 100%;
+        height: auto;
+    }
+    .content {
+        max-width: 600px;
+        margin: 0 auto;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .imgA {
+        width: 100%;
+        height: 50%;
+    }
+    .imgB {
+        width: 100%;
+        height: 50%;
+        margin-top: -6px;
+    }
+}
+
+@media only screen and (max-width: 599px) {
+    .side {
+        padding: 32px;
+    }
+    .title {
+        max-width: 240px;
+        top: 34%;
+    }
 }
