--- a/styles.css
+++ b/styles.css
@@ -183,6 +183,19 @@ span {
     padding: 0 40px;
 }
 
+.logos {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 40px;
+    margin: 8px 0;
+}
+
+.logo {
+    padding: 12px;
+}
 
 @media only screen and (max-width: 1199px) {
     .imgA {
