--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,10 +1,10 @@
 $light: #FFF;
 $dark: #212529;
+$mid: #3e444a;
 $grey: #737474;
 $blue: #007AFF;
 $white: #FFF;
 $yellow: #F5B149;
-$green: #40C070;
 $transition: all 0.125s ease;
 $border-radius: 4px;
 $bold: 600;
@@ -27,7 +27,7 @@ body {
 }
 
 h1 {
-    font-size: 36px;
+    font-size: 32px;
     color: $white;
     font-weight: $bold;
     margin-bottom: 8px;
@@ -36,10 +36,10 @@ h1 {
 }
 
 h2 {
-    font-size: 18px;
+    font-size: 14px;
     font-weight: $bold;
     color: $blue;
-    margin-bottom: 8px;
+    margin-bottom: 12px;
 }
 
 h5 {
@@ -53,10 +53,11 @@ h5 {
 
 h6 {
     color: $grey;
+    font-style: italic;
 }
 
 a {
-    color: $blue;
+    color: $grey;
     font-weight: $bold;
     cursor: pointer;
     text-decoration: none;
@@ -65,7 +66,8 @@ a {
     padding-bottom: 0;
     transition: all .125s ease;
     &:hover {
-        border-bottom: 1px solid $blue;
+        color: $yellow;
+        border-color: $yellow;
         padding-bottom: 2px;
     }
 }
@@ -79,8 +81,7 @@ span {
 }
 
 .side {
-    background-image: url("../images/space-pattern-half.png");
-    background-repeat: repeat;
+    background-color: $dark;
     width: 480px;
     height: 100vh;
     position: fixed;
@@ -98,14 +99,7 @@ span {
 }
 
 .nav {
-    color: $grey;
-    a {
-        color: $grey;
-        &:hover {
-            color: $yellow;
-            border-color: $yellow;
-        }
-    }
+    color: $mid;
 }
 
 .mr-16 {
@@ -133,23 +127,6 @@ span {
     @media only screen and (max-width: 599px) {
         max-width: 240px;
         top: 34%;
-    }
-}
-
-.contact {
-    width: 56px;
-    height: 56px;
-    background-color: $green;
-    position: absolute;
-    bottom: 40px;
-    text-align: center;
-    padding: 12px 8px;
-    &:hover {
-        transform: rotate(360deg);
-        border-bottom: none;
-        padding-bottom: 0;
-        transition: all .75s ease;
-        border-radius: 16px;
     }
 }
 
@@ -236,7 +213,6 @@ span {
     width: 100%;
     height: auto;
     padding: 64px 0;
-    background-color: $dark;
     h5 {
         color: $blue;
         font-weight: $bold;
@@ -260,14 +236,6 @@ span {
     margin-bottom: -4px;
 }
 
-// #jukebox {
-//     background-image: url("../projects/jukebox/jukebox-header.jpg");
-//     background-size: cover;
-//     h5, p, i, span {
-//         color: $white;
-//     }
-// }
-
 #records {
     margin-right: -1px;
     img {
@@ -290,14 +258,6 @@ span {
     }
 }
 
-// #sketchbook {
-//     background-image: url("../projects/sketchbook/sketchbook-header.jpg");
-//     background-size: cover;
-//     h5, p, i, span {
-//         color: $white;
-//     }
-// }
-
 #pages {
     img {
         width: 25%;
@@ -311,12 +271,26 @@ span {
 }
 
 #contact {
-    color: $grey;
+    background-color: $mid;
     a {
-        color: $grey;
+        color: $white;
         &:hover {
             color: $yellow;
             border-color: $yellow;
         }
+    }
+}
+
+.desktop {
+    display: block;
+    @media only screen and (max-width: 479px) {
+        display: none;
+    }
+}
+
+.mobile {
+    display: none;
+    @media only screen and (max-width: 479px) {
+        display: block;
     }
 }
