--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,50 +13,60 @@ body {
     padding: 104px;
 }
 
+::-moz-selection {
+    background: #DEE2E5;
+}
+
+::selection {
+    background: #DEE2E5;
+}
+
 
 /* TYPOGRAPHY */
 
 h1 {
-    font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-    font-size: 25px;
+    font-family: 'Gotu', 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    font-size: 24px;
     font-weight: 500;
-    line-height: 33px;
+    line-height: 32px;
     color: #0A0F11;
 }
 
 h2 {
-    font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-    font-size: 13px;
+    font-family: 'Gotu', 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    font-size: 14px;
     font-weight: 500;
-    line-height: 21px;
-    color: #464A4C;
+    line-height: 22px;
+    color: #828587;
     margin-top: 104px;
 }
 
 h3 {
-    font-family: 'Tenali Ramakrishna', sans-serif;
-    font-size: 21px;
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    font-size: 16px;
     color: #0A0F11;
     font-weight: 500;
 }
 
 h4 {
     font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-    font-size: 13px;
+    font-size: 14px;
     font-weight: 400;
     color: #828587;
 }
 
 p {
-    font-family: 'Tenali Ramakrishna', sans-serif;
-    font-size: 18px;
-    line-height: 25px;
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    font-size: 14px;
+    line-height: 24px;
     color: #0A0F11;
     font-weight: 400;
 }
 
 p a {
-    font-size: 18px;
+    font-size: 14px;
+    padding: 4px;
+    margin: 0 -4px;
 }
 
 
@@ -82,6 +92,10 @@ nav {
     align-items: flex-end;
 }
 
+#page-links {
+    margin-top: 6px;
+}
+
 section {
     display: grid;
     grid-template-columns: repeat(auto-fill, 29%);
@@ -93,8 +107,13 @@ article {
     color: #828587;
 }
 
+article h3 {
+    margin-bottom: 8px;
+}
+
 footer {
     margin-top: 104px;
+    margin-left: -8px;
     display: flex;
     justify-content: space-between;
 }
@@ -103,45 +122,55 @@ footer {
 /* COMPONENTS */
 
 a {
-    font-family: 'Tenali Ramakrishna', sans-serif;
-    font-size: 21px;
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    font-size: 14px;
+    font-weight: 500;
     color: #0057FF;
     text-decoration: none;
     cursor: pointer;
-    box-shadow: inset 0 0 transparent;
     transition: all 0.25s ease;
-    padding-top: 1px;
+    padding: 4px 8px;
+    background-color: transparent;
+    border-radius: 4px;
 }
 
 a:hover {
-    box-shadow: inset 0 2px #0057FF;
+    background-color: rgba(0,87,255,0.1);
 }
 
 a:active {
     color: #828587;
-    box-shadow: inset 0 2px #828587;
+    background-color: #DEE2E5;
+}
+
+#page-links {
+    margin-right: -8px;
 }
 
 #page-links a {
-    margin-left: 16px;
+    font-size: 12px;
 }
 
 #social-links {
-    margin-top: 16px;
+    margin-top: 24px;
 }
 
 #social-links a {
     font-size: 0;
-    box-shadow: none;
-    padding-top: 0;
+    padding: 0;
 }
 
 #social-links a:hover {
-    text-decoration: none;
+    background-color: transparent;
 }
 
 #archive-links {
     width: 1232px;
+    margin-left: -8px;
+}
+
+#archive-links a {
+    font-size: 12px;
 }
 
 iframe {
@@ -155,11 +184,20 @@ iframe {
     padding: 24px;
     margin: -24px 0 0 -24px;
     transition: all 0.25s ease;
+    display: block;
 }
 
 .card:hover {
     background-color: white;
     box-shadow: 8px 16px 32px #DEE2E5;
+}
+
+.card h3 {
+    color: #0057FF;
+}
+
+footer a {
+    font-size: 12px;
 }
 
 
@@ -192,9 +230,8 @@ iframe {
         align-items: flex-start;
         margin-top: 40px;
     }
-    #page-links a {
-        margin-left: 0;
-        margin-right: 16px;
+    #page-links {
+        margin-left: -8px;
     }
     #social-links {
         margin-top: 40px;
@@ -222,11 +259,11 @@ iframe {
         padding: 40px;
     }
     h1 {
-        width: 156px;
+        width: 148px;
     }
     #page-links a {
-        display: block;
-        margin-right: 0;
+        display: table;
+        margin-bottom: 12px;
     }
     #archive-links {
         width: 100%;
