--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    font-size: 14px;
+    line-height: 22px;
+    font-weight: 400;
 }
 
 body {
@@ -34,37 +38,33 @@ h1 {
 
 h2 {
     font-family: 'Gotu', 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-    font-size: 14px;
     font-weight: 500;
-    line-height: 22px;
     color: #828587;
     margin-top: 104px;
 }
 
 h3 {
-    font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
     font-size: 16px;
+    color: #0A0F11;
+    font-weight: 500;
+    margin-bottom: 8px;
+}
+
+h6 {
+    color: #828587;
+}
+
+h5 {
     color: #0A0F11;
     font-weight: 500;
 }
 
-h4 {
-    font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-    font-size: 14px;
-    font-weight: 400;
-    color: #828587;
-}
-
 p {
-    font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-    font-size: 14px;
     line-height: 24px;
     color: #0A0F11;
-    font-weight: 400;
 }
 
 p a {
-    font-size: 14px;
     padding: 4px;
     margin: 0 -4px;
 }
@@ -81,19 +81,15 @@ p a {
 header {
     width: 100%;
     display: inline-flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
     margin-top: 40px;
 }
 
 nav {
     display: inline-flex;
     flex-direction: column;
-    align-items: flex-end;
-}
-
-#page-links {
-    margin-top: 6px;
+    align-items: flex-start;
+    margin-top: 40px;
 }
 
 section {
@@ -107,15 +103,27 @@ article {
     color: #828587;
 }
 
-article h3 {
-    margin-bottom: 8px;
-}
-
 footer {
     margin-top: 104px;
     margin-left: -8px;
     display: flex;
     justify-content: space-between;
+}
+
+#volunteering-3 p {
+    font-size: 12px;
+    margin-bottom: 8px;
+}
+
+#section-reviews p {
+    font-size: 12px;
+    line-height: 20px;
+}
+
+#section-reviews h6 {
+    font-size: 12px;
+    font-weight: 500;
+    margin-top: 8px;
 }
 
 
@@ -144,7 +152,7 @@ a:active {
 }
 
 #page-links {
-    margin-right: -8px;
+    margin-left: -8px;
 }
 
 #page-links a {
@@ -194,12 +202,21 @@ iframe {
 
 .card h3 {
     color: #0057FF;
+    font-size: 16px;
+    margin-bottom: 8px;
+}
+
+/* #section-process {
+    grid-template-columns: repeat(auto-fill, 49%);
+} */
+
+#section-process h6 {
+    margin-bottom: 16px;
 }
 
 footer a {
     font-size: 12px;
 }
-
 
 
 /* IMAGES */
@@ -208,12 +225,23 @@ footer a {
     fill: #828587;
     width: 24px;
     height: 24px;
-    margin-left: 12px;
+    margin-right: 16px;
     transition: all 0.25s ease;
 }
 
 .social-icon:hover {
     fill: #464A4C;
+}
+
+#section-process img {
+    width: 100%;
+    height: auto;
+    border-radius: 4px;
+}
+
+#section-process iframe {
+    width: 100%;
+    border-radius: 4px;
 }
 
 
@@ -223,13 +251,6 @@ footer a {
     body {
         padding: 80px;
     }
-    header {
-        flex-direction: column;
-    }
-    nav {
-        align-items: flex-start;
-        margin-top: 40px;
-    }
     #page-links {
         margin-left: -8px;
     }
@@ -238,10 +259,6 @@ footer a {
     }
     #archive-links {
         width: 768px;
-    }
-    .social-icon {
-        margin-left: 0;
-        margin-right: 12px;
     }
     section {
         grid-template-columns: repeat(auto-fill, 46%);
@@ -276,5 +293,23 @@ footer a {
     }
     #volunteering-2 {
         margin-top: 22px;
+    }
+    #process-ideation div {
+        grid-template-columns: repeat(auto-fill, 100%);
+    }
+    #process-research div {
+        grid-template-columns: repeat(auto-fill, 100%);
+    }
+    #process-wireframe div {
+        grid-template-columns: repeat(auto-fill, 100%);
+    }
+    #process-animation div {
+        grid-template-columns: repeat(auto-fill, 100%);
+    }
+    #process-designsystems div {
+        grid-template-columns: repeat(auto-fill, 100%);
+    }
+    #process-hifi div {
+        grid-template-columns: repeat(auto-fill, 100%);
     }
 }
