--- a/styles/styles.css
+++ b/styles/styles.css
@@ -197,7 +197,7 @@ iframe {
 
 .card:hover {
     background-color: white;
-    box-shadow: 8px 16px 32px #DEE2E5;
+    box-shadow: 0 8px 24px rgba(10,15,17,0.05);
 }
 
 .card h3 {
@@ -237,6 +237,12 @@ footer a {
     width: 100%;
     height: auto;
     border-radius: 4px;
+}
+
+#section-process img:hover {
+    transform: scale(1.5);
+    box-shadow: 8px 16px 32px rgba(10,15,17,0.15);
+    transition: all 0.25s ease;
 }
 
 #section-process iframe {
