--- a/styles/styles.css
+++ b/styles/styles.css
@@ -151,6 +151,11 @@ a:active {
     background-color: #DEE2E5;
 }
 
+#cmbmn {
+    color: #828587;
+    margin-top: 8px;
+}
+
 #page-links {
     margin-left: -8px;
 }
@@ -313,5 +318,8 @@ footer a {
     #section-process img:hover {
         transform: none;
         box-shadow: none;
+    }
+    #cmbmn {
+        max-width: 280px;
     }
 }
