--- a/styles/styles.css
+++ b/styles/styles.css
@@ -151,7 +151,7 @@ a:active {
     background-color: #DEE2E5;
 }
 
-#cmbmn {
+.sub-link {
     color: #828587;
     margin-top: 8px;
 }
@@ -319,7 +319,7 @@ footer a {
         transform: none;
         box-shadow: none;
     }
-    #cmbmn {
+    .sub-link {
         max-width: 280px;
     }
 }
