--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,97 +7,176 @@
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
     font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-    color: #FAFCFD;
+    color: #0A0F11;
     font-size: 20px;
     line-height: 1.4;
     font-weight: 500;
 }
 
 body {
-    background-color: #0A0F11;
+    background-color: #FDFDFA;
     padding: 40px;
 }
 
 ::-moz-selection {
-    background: #828587;
+    background: #FDD651;
 }
 
 ::selection {
-    background: #828587;
+    background: #FDD651;
 }
 
 
 /* TYPOGRAPHY */
 
 h1 {
-    font-size: 80px;
-    font-weight: 900;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 700;
 }
 
 h2 {
-    font-size: 40px;
-    font-weight: 900;
-    /* opacity: 0.6; */
-}
-
-h3 {
-    font-weight: 900;
-}
-
-h4 {
     font-size: 24px;
+    line-height: 32px;
 }
 
-h6 {
-    font-size: 16px;
-    font-weight: 900;
-    opacity: 0.4;
-    margin-top: 104px;
+h5 {
+    font-size: 14px;
+    line-height: 22px;
+    color: #828587;
 }
 
 p {
     font-size: 16px;
-    margin-top: 8px;
-    opacity: 0.6;
+    line-height: 24px;
 }
 
 
 /* LAYOUT */
 
-div {
+body {
     max-width: 800px;
-    margin: 280px auto;
+    margin: 128px auto;
 }
 
 
 /* COMPONENTS */
 
-h3 a {
-    font-weight: 900;
+.spacer-8 {
+    margin-bottom: 64px;
+}
+
+.spacer-4 {
+    margin-bottom: 32px;
+}
+
+.spacer-2 {
+    margin-bottom: 16px;
+}
+
+.spacer-1 {
+    margin-bottom: 8px;
 }
 
 a {
     cursor: pointer;
-    padding: 8px;
-    margin: 0 -8px;
-    background-color: transparent;
-    border-radius: 4px;
     text-decoration: none;
 }
 
-a:hover {
-    background-color: rgba(0,87,255,0.25);
+.link, .link-hz {
+    font-size: 16px;
+    line-height: 24px;
+    color: #0057FF;
 }
 
-h4 span {
-    font-size: 24px;
-    font-weight: 900;
+.link:hover, .link-hz:hover {
+    text-decoration: underline;
+}
+
+.link-hz {
+    margin-right: 8px;
 }
 
 
 /* IMAGES */
 
+#profile {
+    width: 40px;
+    height: 40px;
+}
 
+/* TICKER */
+@-webkit-keyframes ticker {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    visibility: visible;
+  }
+  100% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+
+@keyframes ticker {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    visibility: visible;
+  }
+  100% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+
+.ticker-wrap {
+  position: fixed;
+  top: 4px;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  height: 48px;
+  background-color: transparent;
+  padding-left: 100%;
+  box-sizing: content-box;
+}
+
+.ticker {
+  display: inline-block;
+  height: 48px;
+  line-height: 48px;
+  white-space: nowrap;
+  padding-right: 100%;
+  box-sizing: content-box;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+ -webkit-animation-name: ticker;
+         animation-name: ticker;
+  -webkit-animation-duration: 20s;
+          animation-duration: 20s;
+}
+
+.ticker:hover {
+    animation-play-state: paused;
+}
+
+.ticker__item {
+  display: inline-block;
+  padding: 4px 12px;
+  font-size: 12px;
+  line-height: 20px;
+  background-color: #FDD651;
+  border-radius: 4px;
+  margin-right: 8px;
+}
+
+.ticker__item:hover {
+    background-color: #0057FF;
+    color: #FFFFFF;
+}
 
 
 /* RESPONSIVE */
@@ -108,23 +187,5 @@ h4 span {
     }
     * {
         font-size: 16px;
-    }
-    div {
-        margin: 112px auto;
-    }
-    h1 {
-        font-size: 48px;
-    }
-    h2 {
-        font-size: 24px;
-    }
-    h4 {
-        font-size: 20px;
-    }
-    h4 span {
-        font-size: 20px;
-    }
-    h6 {
-        margin-top: 88px;
     }
 }
