--- a/styles/styles.css
+++ b/styles/styles.css
@@ -85,18 +85,14 @@ a {
     font-weight: 600;
 }
 
-.link, .link-hz {
+.link {
     font-size: 16px;
     line-height: 24px;
     color: #0057FF;
 }
 
-.link:hover, .link-hz:hover {
+.link:hover {
     text-decoration: underline;
-}
-
-.link-hz {
-    margin-right: 8px;
 }
 
 
