--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,14 +7,14 @@
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
     font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-    color: #0A0F11;
+    color: #10111A;
     font-size: 16px;
-    line-height: 20px;
+    line-height: 22px;
     font-weight: 400;
 }
 
 body {
-    background-color: #FDFDF5;
+    background-color: #F7F6F2;
 }
 
 /* ::-moz-selection {
@@ -30,60 +30,115 @@ body {
 
 a {
     cursor: pointer;
-    text-decoration: underline;
+    text-decoration: none;
+    border-bottom: 1px solid #10111A;
+    padding-bottom: 0;
+    transition: all 0.125s ease-in-out;
+    color: #0057FF;
+}
+
+a:hover {
+    border-bottom: 0 solid transparent;
+}
+
+.link-disabled, .link-disabled:hover {
+    border-bottom: 1px solid #828587;
+    cursor: not-allowed;
+    color: #828587;
 }
 
 b {
     font-weight: 600;
 }
 
-a:hover {
-    text-decoration: none;
+small {
+    font-size: 14px;
 }
 
 
 /* LAYOUT */
 
-p {
-    max-width: 48ch;
+header {
+    width: 384px;
+    height: 100vh;
+    overflow: scroll;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-right: 1px solid #10111A;
+}
+
+#main {
+    width: auto;
+    height: auto;
+    margin-left: 384px;
+    overflow: scroll;
+}
+
+small, p, h1, h2, h3, h4, h5, h6 {
+    max-width: 47ch;
+}
+
+.heading {
+    display: grid;
+    grid-gap: 8px;
+    grid-template-columns: repeat;
+    grid-auto-flow: column;
+    margin-left: 72px;
+    position: absolute;
 }
 
 section {
     padding: 72px;
-}
-
-#projects {
     width: 100%;
-    border-top: 1px solid #0A0F11;
+    margin: 0 auto;
+    border-bottom: 1px solid #10111A;
 }
 
-#main {
-    width: 100%;
-    padding: 0;
-    display: flex;
-    flex-direction: row;
-    border-top: 1px solid #0A0F11;
-    border-bottom: 1px solid #0A0F11;
+section:last-of-type {
+    border-bottom: none;
 }
 
-.half {
-    width: 50%;
-    height: auto;
-    padding: 72px;
+.gallery {
+    padding: 72px 0 72px 0;
+    display: grid;
+    grid-gap: 24px;
+    grid-template-columns: repeat;
+    grid-auto-flow: column;
+    overflow-x: scroll;
 }
 
-.half:first-child {
-    border-right: 1px solid #0A0F11;
+.gallery .project {
+    margin-top: 56px;
+    margin-left: 72px;
 }
+
+.gallery .project:last-of-type {
+    margin-right: 72px;
+}
+
 
 /* COMPONENTS */
+
+.spacer-18 {
+    margin-bottom: 72px;
+}
 
 .spacer-8 {
     margin-bottom: 32px;
 }
 
+.spacer-5 {
+    margin-bottom: 20px;
+}
+
 .spacer-4 {
     margin-bottom: 16px;
+}
+
+.spacer-3 {
+    margin-bottom: 12px;
 }
 
 .spacer-2 {
@@ -94,10 +149,6 @@ section {
     margin-bottom: 4px;
 }
 
-.link:hover {
-    text-decoration: none;
-}
-
 
 /* IMAGES */
 
@@ -106,22 +157,67 @@ section {
     height: 40px;
 }
 
+img {
+    width: auto;
+    height: 400px;
+}
+
+.video {
+    height: 352px;
+    aspect-ratio: 16 / 9;
+    border-radius: 12px;
+}
+
+.music {
+    width: 600px;
+    height: 352px;
+}
+
 
 /* RESPONSIVE */
 
-@media only screen and (max-width: 767px) {
-    #main {
-        display: block;
-    }
-    .half {
+@media only screen and (max-width: 959px) {
+    header {
         width: 100%;
-        padding: 48px;
-    }
-    .half:first-child {
+        height: auto;
+        position: relative;
+        display: inline-block;
+        border-bottom: 1px solid #10111A;
         border-right: none;
-        border-bottom: 1px solid #0A0F11;
     }
-    section {
+    #main {
+        width: 100%;
+        height: auto;
+        display: block;
+        margin-left: 0;
+    }
+    section, .gallery {
         padding: 48px;
+    }
+    .gallery {
+        grid-gap: 72px;
+    }
+    .heading {
+        margin-left: 0;
+    }
+    .gallery .project {
+        margin-left: 0;
+    }
+    .gallery .project:last-of-type {
+        margin-right: 0;
+    }
+    img {
+        width: auto;
+        height: 200px;
+    }
+    .video {
+        height: 176px;
+        aspect-ratio: 16 / 9;
+        border-radius: 12px;
+    }
+
+    .music {
+        width: 300px;
+        height: 152px;
     }
 }
