--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,14 +7,14 @@
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
     font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-    color: #10111A;
+    color: #1E403D;
     font-size: 16px;
     line-height: 22px;
     font-weight: 400;
 }
 
 body {
-    background-color: #F7F6F2;
+    background-color: #EDECE8;
 }
 
 /* ::-moz-selection {
@@ -31,21 +31,23 @@ body {
 a {
     cursor: pointer;
     text-decoration: none;
-    border-bottom: 1px solid #10111A;
+    border-bottom: 1px solid #0060ED;
     padding-bottom: 0;
     transition: all 0.125s ease-in-out;
-    color: #0057FF;
+    color: #0060ED;
+    font-weight: 500;
 }
 
 a:hover {
-    border-bottom: 0 solid transparent;
+    color: #A35710;
+    border-color: #A35710;
 }
 
-.link-disabled, .link-disabled:hover {
+/* .link-disabled, .link-disabled:hover {
     border-bottom: 1px solid #828587;
     cursor: not-allowed;
     color: #828587;
-}
+} */
 
 b {
     font-weight: 600;
@@ -66,7 +68,7 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border-right: 1px solid #10111A;
+    border-right: 2px solid #C1BFB5;
 }
 
 #main {
@@ -93,7 +95,7 @@ section {
     padding: 72px;
     width: 100%;
     margin: 0 auto;
-    border-bottom: 1px solid #10111A;
+    border-bottom: 2px solid #C1BFB5;
 }
 
 section:last-of-type {
@@ -155,6 +157,17 @@ section:last-of-type {
 #profile {
     width: 40px;
     height: 40px;
+    background-image: url("../images/favicon.png");
+    background-size: 40px;
+    border-radius: 100px;
+}
+
+#profile:hover {
+    background-image: url("../images/dmtors.gif");
+}
+
+#profile-link {
+    display: contents;
 }
 
 img {
@@ -182,7 +195,7 @@ img {
         height: auto;
         position: relative;
         display: inline-block;
-        border-bottom: 1px solid #10111A;
+        border-bottom: 2px solid #C1BFB5;
         border-right: none;
     }
     #main {
