--- a/styles.scss
+++ b/styles.scss
@@ -135,12 +135,20 @@ h1 {
     font-weight: 400;
     font-size: 48px;
     line-height: 56px;
+    @media only screen and (max-width: 599px) {
+        font-size: 32px;
+        line-height: 40px;
+    }
 }
 
 h2 {
     font-family: $sans;
     font-size: 20px;
     line-height: 28px;
+    @media only screen and (max-width: 599px) {
+        font-size: 16px;
+        line-height: 28px;
+    }
 }
 
 p, p span {
@@ -150,6 +158,14 @@ p, p span {
     a {
         font-size: 18px;
         line-height: 32px;
+        @media only screen and (max-width: 599px) {
+            font-size: 16px;
+            line-height: 28px;
+        }
+    }
+    @media only screen and (max-width: 599px) {
+        font-size: 16px;
+        line-height: 28px;
     }
 }
 
@@ -175,6 +191,10 @@ a {
     &:active {
         border: none;
         opacity: 0.6;
+    }
+    @media only screen and (max-width: 599px) {
+        font-size: 14px;
+        line-height: 20px;
     }
 }
 
