--- a/styles.css
+++ b/styles.css
@@ -118,11 +118,6 @@ p.large {
   line-height: 28px;
 }
 
-small {
-  font-size: 14px;
-  line-height: 24px;
-}
-
 b {
   font-weight: 700;
 }
@@ -130,13 +125,14 @@ b {
 a {
   font-family: "Inconsolata", mono;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 32px;
   border-bottom: 1px solid;
+  box-sizing: border-box;
   padding-bottom: 3px;
   text-decoration: none;
 }
 a:hover {
-  border: none;
+  border-color: transparent;
 }
 a:active {
   border-bottom: 1px solid;
@@ -158,7 +154,7 @@ nav {
   }
 }
 nav p {
-  margin-bottom: 13px;
+  margin-bottom: 5px;
 }
 nav p:last-of-type {
   margin-bottom: 0;
@@ -210,7 +206,7 @@ nav p:last-of-type {
   margin-right: 13px;
 }
 .link-group a:last-of-type {
-  margin-left: 0;
+  margin-right: 0;
 }
 
 .img-link {
@@ -253,4 +249,9 @@ svg {
     width: 100%;
     margin-left: 0;
   }
+}
+
+.text-container {
+  display: grid;
+  grid-gap: 3px;
 }/*# sourceMappingURL=styles.css.map */
