--- a/styles.scss
+++ b/styles.scss
@@ -1,29 +1,17 @@
 // Variables
 
-// Color
-$color-light: #fefdf6;
-$color-dark: #1a1919;
-
-// Font
-$font-sans: 'Inter', sans-serif;
-$font-serif: 'Libre Baskerville', serif;
-$font-mono: 'Inconsolata', mono;
-
-// Spacing
-$spacing-xxs: 3px;
-$spacing-xs: 5px;
-$spacing-s: 13px;
-$spacing-m: 21px;
-$spacing-l: 34px;
-$spacing-xl: 55px;
-$spacing-xxl: 89px;
-
-// Radius
-$radius-large: 13px;
-
 // Breakpoints
+$screen-xsmall: 399px;
 $screen-small: 599px;
 $screen-medium: 767px;
+
+// Color
+$color-light: #fafafa;
+$color-dark: #111;
+
+// Font
+$font-sans: 'Helvetica', sans-serif;
+$font-mono: 'Fragment Mono', monospace;
 
 // Global
 * {
@@ -33,20 +21,7 @@ $screen-medium: 767px;
 }
 
 body {
-    padding: $spacing-xxl;
-    width: calc(100% - $spacing-xxl * 2);
-    max-width: 987px;
-    margin: 0 auto;
-    display: flex;
-    @media only screen and (max-width: $screen-medium) {
-        padding: $spacing-l;
-        width: calc(100% - $spacing-l * 2);
-    }
-    @media only screen and (max-width: $screen-small) {
-        display: block;
-        padding: $spacing-l;
-        width: calc(100% - $spacing-l * 2);
-    }
+    display: grid;
 }
 
 // Theme
@@ -57,15 +32,22 @@ body {
     *:focus-visible {
         outline-color: $color-dark;
     }
+    h1 {
+        color: $color-light;
+    }
     svg {
-        fill: $color-dark;
+        circle {
+            fill: $color-dark;
+        }
+        path {
+            stroke: $color-dark;
+        }
+    }
+    #banner, .quote {
+        background-color: $color-light;
     }
     a {
         color: $color-dark;
-        border-color: $color-dark;
-    }
-    section {
-        border-color: $color-dark;
     }
 }
 @mixin theme-dark() {
@@ -75,15 +57,22 @@ body {
     *:focus-visible {
         outline-color: $color-light;
     }
+    h1 {
+        color: $color-dark;
+    }
     svg {
-        fill: $color-light;
+        circle {
+            fill: $color-light;
+        }
+        path {
+            stroke: $color-light;
+        }
+    }
+    #banner, .quote {
+        background-color: $color-dark;
     }
     a {
         color: $color-light;
-        border-color: $color-light;
-    }
-    section {
-        border-color: $color-light;
     }
 }
   
@@ -103,163 +92,99 @@ html[data-theme="dark"] {
 // Type
 
 h1 {
-    font-family: $font-serif;
-    font-size: 24px;
-    line-height: 32px;
-}
-
-h2 {
+    font-size: 14vw;
     font-family: $font-sans;
-    font-size: 20px;
-    line-height: 28px;
+    font-weight: bold;
+    line-height: 1;
+    text-transform: uppercase;
+    margin-top: 2%;
 }
 
-h3 {
-    font-family: $font-sans;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 700;
+h2, .quote {
+    font-family: $font-mono;
+    font-size: 5vw;
+    line-height: 1.5;
 }
 
-p {
-    font-family: $font-sans;
-    font-size: 16px;
-    line-height: 24px;
-    &.large {
-        font-size: 20px;
-        line-height: 28px;
-    }
-}
-
-b {
-    font-weight: 700;
+.quote {
+    padding: 5px;
 }
 
 // Components
 
-a {
-    font-family: $font-mono;
-    font-size: 18px;
-    line-height: 36px;
-    border-bottom: 1px solid;
-    box-sizing: border-box;
-    padding-bottom: 3px;
-    text-decoration: none;
-    &:hover {
-        border-color: transparent;
-    }
-    &:active {
-        border-bottom: 1px solid;
-    }
-    &.current {
-        border: none;
-        pointer-events: none;
-        &::after {
-            content: ' •';
-        }
-    }
-}
-
-nav {
-    margin-right: $spacing-xxl;
-    @media only screen and (max-width: $screen-medium) {
-        margin-right: $spacing-xl;
-    }
-    p {
-        margin-bottom: $spacing-xs;
-        &:last-of-type {
-            margin-bottom: 0;
-        }
-    }
-    @media only screen and (max-width: $screen-small) {
-        margin-right: 0;
-        margin-bottom: $spacing-xl;
-    }
-}
-
-.header {
+#page {
     width: 100%;
-    height: 36px;
-    border-bottom: 1px solid;
 }
 
-.section {
+#banner {
     display: grid;
-    grid-gap: $spacing-m;
-    margin-top: $spacing-l;
-    margin-bottom: $spacing-xl;
-    &:last-of-type {
-        margin-bottom: 0;
+    gap: 5px;
+    grid-auto-flow: column;
+    justify-content: start;
+    align-items: center;
+    padding: 5px;
+    position: absolute;
+    p {
+        font-family: $font-mono;
+        font-size: 13px;
+        line-height: 1;
     }
-    img, video {
-        border-radius: $radius-large;
-        width: 100%;
-        aspect-ratio: 16 / 11;
-        object-fit: cover;
+    svg {
+        width: 13px;
+        height: 13px;
     }
-    iframe {
-        border-radius: $radius-large;
-        width: 100%;
-        aspect-ratio: 16 / 9;
+    .half-circle {
+        transform-origin: 50% 50%;
+        animation: spin var(--duration, 2s) linear infinite;
     }
-    .image-grid {
-        border-radius: $radius-large;
-        display: grid;
-        grid-template-columns: repeat(3, 2fr);
-        img {
-            border-radius: 0;
+    .inner-half-circle {
+        transform-origin: 50% 50%;
+        animation: spin-reverse var(--inner-duration, 2s) linear infinite;
+    }
+    @keyframes spin {
+        from {
+            transform: rotate(0deg);
+        }
+        to {
+            transform: rotate(360deg);
+        }
+    }
+    @keyframes spin-reverse {
+        from {
+            transform: rotate(0deg);
+        }
+        to {
+            transform: rotate(-360deg);
         }
     }
 }
 
-.link-group {
-    a {
-        margin-right: $spacing-s;
-        &:last-of-type {
-            margin-right: 0;
-        }
-    }
+section {
+    margin-bottom: 10%;
 }
 
-.img-link {
-    border-bottom: none;
-    padding-bottom: 0;
-    text-decoration: none;
+.image {
+    position: absolute;
+    z-index: -1000;
+}
+
+.image, .project {
+    display: block;
+    width: 100%;
+}
+
+.text {
+    position: relative;
+    padding: 3%;
+}
+
+a {
+    text-decoration: underline;
+    text-underline-offset: 6px;
     &:hover {
-        border: none;
+        text-decoration: none;
     }
     &:active {
-        border-bottom: none;
+        opacity: 0;
     }
-}
-
-// Elements
-
-svg {
-    margin-bottom: $spacing-l;
-}
-
-.nav {
-    position: fixed;
-    @media only screen and (max-width: $screen-small) {
-        position: relative;
-    }
-}
-
-.page {
-    width: calc(100% - 177px);
-    margin-left: 177px;
-    @media only screen and (max-width: $screen-medium) {
-        width: calc(100% - 143px);
-        margin-left: 143px;
-    }
-    @media only screen and (max-width: $screen-small) {
-        width: 100%;
-        margin-left: 0;
-    }
-}
-
-.text-container {
-    display: grid;
-    grid-gap: $spacing-xxs;
 }
