--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,16 @@ h1 {
   text-transform: uppercase;
   margin-top: 2%;
 }
+@media only screen and (max-width: 767px) {
+  h1 {
+    margin-top: 3%;
+  }
+}
+@media only screen and (max-width: 599px) {
+  h1 {
+    margin-top: 4%;
+  }
+}
 
 h2, .quote {
   font-family: "Fragment Mono", monospace;
